--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     <title>Document</title>
 </head>
 <body>
-
-
+<div class="container">
+    <div class="content">
+        <section class="material">
+            <form action="#" method="post">
+                <div class="field">
+                    <label for="poke-id">Id of pokemon:</label>
+                    <input type="text" name="poke-id" id="poke-id" />
+                </div>
+                <div class="actions">
+                    <button type="button" id="run">Run the script</button>
+                </div>
+            </form>
+        </section>
+    </div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
