--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
                 </div>
             </form>
         </section>
+        <section>
+            <div class="name"></div>
+            <div class="id"></div>
+            <div class="moves"></div>
+            <div class="sprites"></div>
+
+        </section>
     </div>
 </div>
 <script src="script.js"></script>
