adding picture to title/changing update feeld and button layout

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
 <div class="container-main">
-        <div class="title"><h1>Pokedex</h1></div>
+        <div class="header">
+            <div><h1>Pokedex</h1></div>
+            <div><img src="Poke-Ball-Gloss_01_Top-View.png" height="50px" width="50px"></div>
+        </div>
         <div class="search">
             <form class="form" action="#" method="post">
-                    <label for="poke-id">Id or name of pokemon:</label>
-                    <input type="text" name="poke-id" id="poke-id" />
+                    <input type="text" name="poke-id" id="poke-id" placeholder="Id or name of pokemon"/>
                     <button type="button" id="run">Go</button>
             </form>
         </div>
