--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -20,10 +23,15 @@
             </form>
         </div>
         <div class="features">
-            <div class="name"></div>
-            <div class="id"></div>
-            <div class="moves"></div>
-            <div class="sprites"></div>
+            <div class="align-features">
+                <div class="align-text-features">
+                    <div class="name"></div>
+                    <div class="id"></div>
+                    <div class="moves"></div>
+                </div>
+                <div class="sprites"></div>
+            </div>
+
         </div>
 </div>
 <script src="script.js"></script>
