removing method and post from form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div><img src="Poke-Ball-Gloss_01_Top-View.png" height="50px" width="50px"></div>
         </div>
         <div class="search">
-            <form class="form" action="#" method="post">
+            <form class="form">
                     <input type="text" name="poke-id" id="poke-id" placeholder="Id or name of pokemon"/>
                     <button type="button" id="run">Go</button>
             </form>
