Removed borders from the div feauters in front page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-<div class="container-main">
+<div class="container-main" >
         <div class="header">
             <div><h1>Pokedex</h1></div>
             <div><img src="Poke-Ball-Gloss_01_Top-View.png" height="50px" width="50px"></div>
@@ -24,7 +24,7 @@
         </div>
         <div class="features">
             <div class="align-features">
-                <div class="align-text-features">
+                <div class="align-text-features" id="border">
                     <div class="name"></div>
                     <div class="id"></div>
                     <div class="moves"></div>
